# Embedded-competition-code-repository

./: README.md  README_cn.md
mine/: can_sender.cpp  can_sender_script.service  start_can_sender.sh
mine/flask/: app.py
mine/video/: usb_camera_fcos.py
mine/voice/: monitor.sh  output.txt  result.txt  run.py  voice.py
mine/vosk-api/python/example/: read_geshi.py  test_simple.py
ros2_nav-main/: README.md
ros2_nav-main/rplidar_ws/src/: readme.md
ros2_nav-main/rplidar_ws/src/can_bridge_cpp/: CMakeLists.txt  package.xml
ros2_nav-main/rplidar_ws/src/can_bridge_cpp/include/can_bridge_cpp/: socketcan.h
ros2_nav-main/rplidar_ws/src/can_bridge_cpp/src/: can_sender.cpp  socketcan.cpp
ros2_nav-main/rplidar_ws/src/my_slam/: CMakeLists.txt  package.xml
ros2_nav-main/rplidar_ws/src/robot_bringup/: CMakeLists.txt  package.xml
ros2_nav-main/rplidar_ws/src/robot_nav2/: package.xml  (+1 more)
wheel-legged-robot-main/: .mxproject  CMakeLists.txt  README.md  cboard.ioc  openocd.cfg
wheel-legged-robot-main/Src/: freertos.c
wheel-legged-robot-main/algorithms/: VMC_calc.cpp  VMC_calc.hpp  kalman_filter.cpp  kalman_filter.hpp  math_lib.cpp  math_lib.hpp  sin_table_data.inc
wheel-legged-robot-main/applications/includings/: buzzer_task.hpp  can_task.hpp  chassis_L_task.hpp  chassis_R_task.hpp  imu_task.hpp
wheel-legged-robot-main/applications/sources/: buzzer_task.cpp  calibrate_task.cpp  can_task.cpp  chassis_L_task.cpp  chassis_R_task.cpp  imu_task.cpp  led_task.cpp  observe_task.cpp  plot_task.cpp  uart_task.cpp
wheel-legged-robot-main/cmake/stm32cubemx/: CMakeLists.txt
(+7 files in other folders)
